--- a/js/src/components/LinkDialog.scss
+++ b/js/src/components/LinkDialog.scss
@@ -21,6 +21,11 @@
       right: 0;
       bottom: 0;
       background-color: rgba(0, 0, 0, 0.33);
+      transition: opacity 0.25s;
+
+      &-hidden {
+        opacity: 0;
+      }
     }
 
     &-box {
@@ -31,6 +36,13 @@
       border-radius: 8px;
       box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.15),
         0px 0px 8px rgba(0, 0, 0, 0.1);
+      transform: scale(1);
+      transition: opacity 0.25s, transform 0.25s;
+
+      &-hidden {
+        opacity: 0;
+        transform: scale(0.85);
+      }
 
       &-content {
         padding: 32px;
@@ -101,6 +113,14 @@
           font-size: 10px;
           color: #999;
         }
+      }
+    }
+
+    &-container {
+      display: block;
+
+      &-hidden {
+        display: none;
       }
     }
   }
