Add cancel button to LinkDialog

--- a/js/src/components/LinkDialog.scss
+++ b/js/src/components/LinkDialog.scss
@@ -137,6 +137,14 @@
           color: #999;
         }
       }
+
+      &-cancel {
+        position: absolute;
+        -webkit-appearance: none;
+        top: 8px;
+        left: 8px;
+        cursor: pointer;
+      }
     }
 
     &-container {
