--- a/js/src/components/LinkDialog.scss
+++ b/js/src/components/LinkDialog.scss
@@ -33,10 +33,9 @@
       display: flex;
       position: relative;
       flex-direction: column;
-      width: 320px;
-      background-color: #f5f5f5;
-      border-radius: 8px;
-      box-shadow: 0px 16px 24px rgba(#000, 0.15), 0px 0px 8px rgba(#000, 0.1);
+      background-color: #f6f6f6;
+      border-radius: 16px;
+      box-shadow: 0px 16px 24px rgba(#000, 0.1), 0px 0px 8px rgba(#000, 0.05);
       transform: scale(1);
       transition: opacity 0.25s, transform 0.25s;
       overflow: hidden;
@@ -47,41 +46,48 @@
       }
 
       &-content {
-        padding: 32px;
+        padding: 24px;
+        text-align: center;
 
         h3 {
           display: block;
-          margin-bottom: 4px;
-          text-align: center;
-          font-size: 20px;
+          margin-bottom: 24px;
+          text-align: left;
+          text-transform: uppercase;
+          font-size: 22px;
           font-weight: bold;
-        }
-
-        h4 {
-          display: block;
-          margin-bottom: 16px;
-          text-align: center;
-          font-size: 13px;
-          font-weight: normal;
-          color: #333;
+          line-height: 1.2;
         }
 
         &-qrcode {
           position: relative;
           display: block;
-          margin-bottom: 16px;
-          background-color: #fff;
+          margin-bottom: 24px;
+          background-color: #f6f6f6;
           padding: 16px;
-          border-radius: 8px;
-          box-shadow: 0px 4px 12px rgba(#000, 0.1);
-          width: 256px;
-          height: 256px;
+          border-radius: 16px;
+          box-shadow: 4px 4px 8px rgba(#000, 0.15), -8px -8px 8px #fff;
           overflow: hidden;
 
-          img {
+          &-wrapper {
             display: block;
             width: 224px;
             height: 224px;
+            margin-bottom: 16px;
+
+            img {
+              display: block;
+              width: 224px;
+              height: 224px;
+            }
+          }
+
+          > p {
+            display: block;
+            color: #808080;
+            font-weight: bold;
+            font-size: 12px;
+            text-align: center;
           }
 
           &-connecting {
@@ -105,46 +111,47 @@
           }
         }
 
-        ol {
-          display: block;
-          list-style: decimal inside;
+        a {
+          text-align: center;
+          cursor: pointer;
+          transition: color 0.1s;
 
-          li {
-            display: list-item;
-            line-height: 1.5;
-            font-size: 13px;
-            color: #000;
+          &,
+          &:link,
+          &:visited {
+            color: #999;
           }
-        }
-      }
 
-      &-footer {
-        padding: 16px 0;
-        border-top: 1px solid #ddd;
-
-        p {
-          display: block;
-          text-align: center;
-          font-size: 13px;
-          font-weight: bold;
-          color: #777;
-        }
-
-        small {
-          display: block;
-          text-align: center;
-          margin-top: 4px;
-          font-size: 10px;
-          color: #999;
+          &:hover,
+          &:active {
+            color: #666;
+            text-decoration: underline;
+          }
         }
       }
 
       &-cancel {
         position: absolute;
         -webkit-appearance: none;
-        top: 8px;
-        left: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 24px;
+        right: 24px;
+        width: 24px;
+        height: 24px;
+        border-radius: 12px;
+        background-color: #e7e7e7;
         cursor: pointer;
+
+        img {
+          transition: opacity 0.1s;
+          opacity: 0.33;
+        }
+
+        &:hover img {
+          opacity: 1;
+        }
       }
     }
 
