Adjust font size for link dialog

--- a/js/src/components/LinkDialog.scss
+++ b/js/src/components/LinkDialog.scss
@@ -116,6 +116,7 @@
           text-align: center;
           cursor: pointer;
           transition: color 0.1s;
+          font-size: 14px;
 
           &,
           &:link,
