--- a/src/components/Snackbar.scss
+++ b/src/components/Snackbar.scss
@@ -2,7 +2,7 @@
 // Copyright (c) 2018-2020 Coinbase, Inc. <https://www.coinbase.com/>
 // Licensed under the Apache License, version 2.0
 
-.-walletlink-css-reset {
+.-cbwsdk-css-reset {
   .-gear-container {
     margin-left: 16px !important;
     margin-right: 9px !important;
@@ -29,7 +29,7 @@
     z-index: 10000;
   }
 
-  .-walletlink-snackbar {
+  .-cbwsdk-snackbar {
     align-items: flex-end;
     display: flex;
     flex-direction: column;
@@ -171,7 +171,7 @@
       }
 
       &-expanded {
-        .-walletlink-snackbar-instance-menu {
+        .-cbwsdk-snackbar-instance-menu {
           opacity: 1;
           display: flex;
           transform: translateY(8px);
