--- a/src/components/LinkDialog.scss
+++ b/src/components/LinkDialog.scss
@@ -1,9 +1,8 @@
-// Copyright (c) 2018-2020 WalletLink.org <https://www.walletlink.org/>
 // Copyright (c) 2018-2020 Coinbase, Inc. <https://www.coinbase.com/>
 // Licensed under the Apache License, version 2.0
 
-.-walletlink-css-reset {
-  .-walletlink-link-dialog {
+.-cbwsdk-css-reset {
+  .-cbwsdk-link-dialog {
     z-index: 2147483647;
     position: fixed;
     top: 0;
@@ -176,7 +175,7 @@
         }
 
         &:hover {
-          .-walletlink-link-dialog-box-cancel-x {
+          .-cbwsdk-link-dialog-box-cancel-x {
             &-a,
             &-b {
               background-color: #000;
@@ -195,8 +194,8 @@
     }
   }
 
-  .-walletlink-link-dialog-container-dark {
-    .-walletlink-link-dialog {
+  .-cbwsdk-link-dialog-container-dark {
+    .-cbwsdk-link-dialog {
       &-box {
         background-color: #2a2a2a;
 
@@ -247,7 +246,7 @@
           }
 
           &:hover {
-            .-walletlink-link-dialog-box-cancel-x {
+            .-cbwsdk-link-dialog-box-cancel-x {
               &::before,
               &::after {
                 background-color: #eee;
