--- a/src/components/Spinner.scss
+++ b/src/components/Spinner.scss
@@ -1,17 +1,16 @@
-// Copyright (c) 2018-2020 WalletLink.org <https://www.walletlink.org/>
 // Copyright (c) 2018-2020 Coinbase, Inc. <https://www.coinbase.com/>
 // Licensed under the Apache License, version 2.0
 
-.-walletlink-css-reset {
-  .-walletlink-spinner {
+.-cbwsdk-css-reset {
+  .-cbwsdk-spinner {
     display: inline-block;
 
     svg {
       display: inline-block;
-      animation: 2s linear infinite -walletlink-spinner-svg;
+      animation: 2s linear infinite -cbwsdk-spinner-svg;
 
       circle {
-        animation: 1.9s ease-in-out infinite both -walletlink-spinner-circle;
+        animation: 1.9s ease-in-out infinite both -cbwsdk-spinner-circle;
         display: block;
         fill: transparent;
         stroke-dasharray: 283;
@@ -24,7 +23,7 @@
   }
 }
 
-@keyframes -walletlink-spinner-svg {
+@keyframes -cbwsdk-spinner-svg {
   0% {
     transform: rotateZ(0deg);
   }
@@ -33,7 +32,7 @@
   }
 }
 
-@keyframes -walletlink-spinner-circle {
+@keyframes -cbwsdk-spinner-circle {
   0%,
   25% {
     stroke-dashoffset: 280;
