--- a/src/components/TryExtensionLinkDialog.scss
+++ b/src/components/TryExtensionLinkDialog.scss
@@ -1,9 +1,8 @@
-// Copyright (c) 2018-2020 WalletLink.org <https://www.walletlink.org/>
-// Copyright (c) 2018-2020 Coinbase, Inc. <https://www.coinbase.com/>
+// Copyright (c) 2018-2022 Coinbase, Inc. <https://www.coinbase.com/>
 // Licensed under the Apache License, version 2.0
 
-.-walletlink-css-reset {
-  .-walletlink-extension-dialog {
+.-cbwsdk-css-reset {
+  .-cbwsdk-extension-dialog {
     z-index: 2147483647;
     position: fixed;
     top: 0;
@@ -250,7 +249,7 @@
         }
 
         &:hover {
-          .-walletlink-link-dialog-box-cancel-x {
+          .-cbwsdk-link-dialog-box-cancel-x {
             &-a,
             &-b {
               background-color: #000;
