--- a/src/lib/cssReset.scss
+++ b/src/lib/cssReset.scss
@@ -1,10 +1,9 @@
-// Copyright (c) 2018-2020 WalletLink.org <https://www.walletlink.org/>
-// Copyright (c) 2018-2020 Coinbase, Inc. <https://www.coinbase.com/>
+// Copyright (c) 2018-2022 Coinbase, Inc. <https://www.coinbase.com/>
 // Licensed under the Apache License, version 2.0
 
 @namespace svg "http://www.w3.org/2000/svg";
 
-.-walletlink-css-reset {
+.-cbwsdk-css-reset {
   &,
   * {
     animation: none;
