--- a/src/components/TryExtensionLinkDialog.scss
+++ b/src/components/TryExtensionLinkDialog.scss
@@ -34,15 +34,17 @@
       bottom: 0;
       transition: opacity 0.25s;
 
+      &.light {
+        background-color: rgba($black, 0.5);
+      }
+
+      &.dark {
+        background-color: rgba(50, 53, 61, 0.4);
+      }
+
       &-hidden {
         opacity: 0;
       }
-    }
-    &-backdrop-light {
-      background-color: rgba($black, 0.5);
-    }
-    &-backdrop-dark {
-      background-color: rgba(50, 53, 61, 0.33);
     }
 
     &-box {
@@ -64,6 +66,15 @@
         border-radius: 8px;
         overflow: hidden;
         min-height: 300px;
+
+        &.dark {
+          background-color: $black;
+          box-shadow: 0 4px 16px rgba(255, 255, 255, 0.05);
+        }
+
+        &.light {
+          background-color: $white;
+        }
 
         &-subtext {
           margin-top: 15px;
@@ -93,7 +104,8 @@
             cursor: pointer;
             font-weight: 500;
             text-align: center;
-            &.-dark {
+
+            &.dark {
               background-color: $blue-dark;
             }
           }
@@ -104,12 +116,14 @@
           flex-basis: 50%;
           flex-direction: column;
           justify-content: center;
-        }
-        &-info-region-light {
-          background-color: $wash;
-        }
-        &-info-region-dark {
-          background-color: $background-alt-dark;
+
+          &.light {
+            background-color: $wash;
+          }
+
+          &.dark {
+            background-color: $background-alt-dark;
+          }
         }
 
         &-description {
@@ -148,22 +162,16 @@
             font-size: 13px;
             line-height: 19px;
             align-self: center;
-          }
-          &-text-light {
-            color: $black;
-          }
-          &-text-dark {
-            color: white;
+
+            &.light {
+              color: $black;
+            }
+
+            &.dark {
+              color: white;
+            }
           }
         }
-      }
-      &-top-dark {
-        background-color: $black;
-        box-shadow: 0 4px 16px rgba(0, 24, 77, 0.05);
-      }
-
-      &-top-light {
-        background-color: $white;
       }
 
       &-bottom {
@@ -172,6 +180,15 @@
         overflow: hidden;
         border-radius: 8px;
         margin-top: 8px;
+
+        &.light {
+          background-color: $white;
+        }
+
+        &.dark {
+          background-color: $black;
+          box-shadow: 0 4px 16px rgba(255, 255, 255, 0.05);
+        }
 
         &-description-region {
           display: flex;
@@ -187,18 +204,19 @@
           margin-top: 12px;
           color: $grey-50;
 
+          &.dark {
+            color: $white;
+
+            a {
+              color: $blue-dark;
+            }
+          }
+
           a {
             font-size: inherit;
             line-height: inherit;
             color: $blue-normal;
             cursor: pointer;
-          }
-        }
-
-        &-description-dark {
-          color: $white;
-          a {
-            color: $blue-dark;
           }
         }
 
@@ -248,14 +266,6 @@
         }
       }
 
-      &-bottom-light {
-        background-color: $white;
-      }
-      &-bottom-dark {
-        background-color: $black;
-        box-shadow: 0 4px 16px rgba(0, 24, 77, 0.05);
-      }
-
       &-cancel {
         position: absolute;
         -webkit-appearance: none;
@@ -267,13 +277,35 @@
         width: 24px;
         height: 24px;
         border-radius: 12px;
-        background-color: $wash;
+
         cursor: pointer;
+
+        &.light {
+          background-color: $wash;
+        }
+
+        &.dark {
+          background-color: $background-alt-dark;
+        }
 
         &-x {
           position: relative;
           display: block;
           cursor: pointer;
+
+          &.light {
+            &::before,
+            &::after {
+              background-color: $black;
+            }
+          }
+
+          &.dark {
+            &::before,
+            &::after {
+              background-color: $white;
+            }
+          }
 
           &::before,
           &::after {
@@ -284,7 +316,6 @@
             left: -7px;
             width: 14px;
             height: 1px;
-            background-color: $black;
             transition: background-color 0.2s;
           }
 
@@ -322,10 +353,12 @@
       font-size: 22px;
       font-weight: 600;
       line-height: 28px;
-      &.-light {
+
+      &.light {
         color: $black;
       }
-      &.-dark {
+
+      &.dark {
         color: $white;
       }
     }
